--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div id="copyContainer">
             <button type="button" id="copyBtn" onclick="copyText()">Copiar</button><br>
             <p id="result"></p>
+            <p id="copyResult"></p>
         </div>
     </form>   
    
