--- a/index.html
+++ b/index.html
@@ -7,25 +7,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/446451be97.js" crossorigin="anonymous"></script>
-    <!-- Facebook Pixel Code -->
-<script>
-    !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
-    n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
-    document,'script','https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '1508957339828323');
-    fbq('track', 'PageView');
-    </script>
-    <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=1508957339828323&ev=PageView&noscript=1"
-    /></noscript>
-    <!-- DO NOT MODIFY -->
-    <!-- End Facebook Pixel Code -->
 </head>
 <body>
     <header>
-        <h1>Conversor de Textos</h1>
+        <h1>Conversor de Textos - DEPRECIADO</h1>
+        <p>Utilize o novo conversor: <a href="https://aetheriv.github.io/Converte-Textos/">NOVO CONVERSOR</a></p>
+        
     </header>
 
     <textarea name="userInput" id="textInput" placeholder="Digite o texto aqui"></textarea>
@@ -111,7 +98,7 @@
         <h4>
             Desenvolvido por Rafael Romera
             <br>
-            Versão: 3.3
+            Versão: 3.5
         </h4>
     </footer>
 
